main scrollbar fixed

--- a/styles/investor/investor.css
+++ b/styles/investor/investor.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+main{
+    overflow-x: hidden;
+}
+
 /* =========================================
    2. MAIN CONTAINER LAYOUT
    ========================================= */
